--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,6 +1,7 @@
 <h1>New Project</h1>
 
 <%= form_for(@project) do |f| %>
+  <%= render 'shared/error_messages', object: f.object %>
   <p>
     <%= f.label :title %><br>
     <%= f.text_field :title %>
