--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,14 @@
 
   <body>
     <main class="container mx-auto mt-28 px-5 flex">
-      <% flash.each do |key, message| %>
-        <div><%= message %></div>
-      <% end -%>
-      <%= yield %>
+      <div class="w-full md:w-96 md:max-w-full mx-auto">
+        <div class="p-6 border border-gray-300 sm:rounded-md">
+          <% flash.each do |key, message| %>
+            <div><%= message %></div>
+          <% end -%>
+          <%= yield %>
+        </div>
+      </div>
     </main>
   </body>
 </html>
