Change projects 'status' to 'tracking_status'
  - this allows for multiple status type attributes (might be premature optimisation), IMHO clarity provides no surprises
  - migrate to new Rails 7 enum definition
      'enum :enum_name, <list of values (can be array or hash) >', using hash as backed by PG

    vs.
      'enum enum_name: <list of values>'
    Additonal benefits are methods added do NOT require a leading
    '_'#method_name e.g.'_prefix' becomes 'prefix'
  - back the rails_enum with Postres enum - prevents bypassing of validation in the application layer
    under the hood the enum is stored as an integer even though it does not look that way
      - https://www.postgresql.org/docs/current/datatype-enum.html
      - https://stackoverflow.com/questions/10923213/postgres-enum-data-type-or-check-constraint
      - https://api.rubyonrails.org/v7.0/classes/ActiveRecord/Enum.html

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,6 @@
 <% title(:Projects, @project.title) %>
 
 <h1><%= @project.title %></h1>
-<h3><%= @project.description %></h3>
+<h3>Description:</h3>
+<%= @project.description %>
+<h3>Tracking Status: <span><%= @project.tracking_status.humanize %></span></h3>
