--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,14 @@
 <% title(:Projects, @project.title) %>
 
 <h1><%= @project.title %></h1>
-<h3>Description:</h3>
-<%= @project.description %>
+<p>
+  <%= @project.description.present? ? @project.description : "No description has been provided" %>
+</p>
 <h3>Tracking Status: <span><%= @project.tracking_status.humanize %></span></h3>
+<%= link_to "Add Comment", new_project_comment_path(@project) %>
+
+<% if @project.comments.any? %>
+  <%= render partial: "comments/comment", collection: @project.comments %>
+<% else %>
+  <div>No activity for this project yet</div>
+<% end %>
