--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,7 +8,7 @@
 
 <%= simple_form_for(@project, builder: SimpleForm::Tailwind::FormBuilder, remote: true) do |f| %>
   <%= render partial: "tracking_status", locals: { project: @project, f: f } %>
-  <%= f.submit I18n.t("simple_form.buttons.project.tracking_status.submit", btn_action_type: @project.persisted? ? :Update : :Create) %>
+  <%= f.submit I18n.t("simple_form.buttons.project.tracking_status.submit", btn_action_type: @project.persisted? ? :Update : :Create), class: "w-full flex justify-center mt-4 py-2 px-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
 <% end -%>
 
 <%= link_to "Add Comment", new_project_comment_path(@project) %>
