Add missing links
  - Projects
  - index page style 'New Project'
  - show page add 'All projects' as back button
  - show page style 'Add comment'
  - Comments
    - new comment page add 'Back to <project.title>'
    - new comment page add 'All projects'
  - also remove experimental border styling around flash messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,11 @@
   <body>
     <main class="container mx-auto mt-28 px-5 flex prose">
       <div class="w-full md:max-w-full mx-auto">
-        <% flash.each do |key, message| %>
-          <div class=""><%= message %></div>
-        <% end -%>
+        <div class="">
+          <% flash.each do |key, message| %>
+            <div class=""><%= message %></div>
+          <% end -%>
+        </div>
         <%= yield %>
       </div>
     </main>
