--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -5,6 +5,10 @@
     <hr class="text-slate-400 w-full flex">
     <%= f.input :detail, autocomplete: "detail", placeholder: "Add your comments here ..." %>
     <%= f.button :submit, class: "w-full flex justify-center mt-4 py-2 px-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
-    <hr>
   <% end -%>
+</div>
+
+<div class="flex justify-between items-center mt-4">
+  <%= link_to "Back to #{@project.title}", project_path(@project), class: "py-2 px-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+  <%= link_to 'All projects', projects_path, class: "py-2 px-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
 </div>
