--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,8 +1,11 @@
 <% title(:Projects) %>
 
-<div class="w-full">
+<div class="flex justify-between items-center">
   <h1 class="font-bold text-4xl">Projects</h1>
+  <%= link_to 'New project', new_project_path, class: "py-2 px-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+</div>
 
+<div class="w-full">
   <% if @projects.any? %>
     <% @projects.each do |project| %>
       <div class="container rounded-md border-red-400 border-2 mt-4 divide-y">
@@ -30,6 +33,9 @@
     <p>There are no existing Projects</p>
     <%= link_to "Create your first project", new_project_path %>
   <% end -%>
+</div>
 
-  <%= link_to "New Project", new_project_path %>
+<div class="flex justify-between items-center mt-4">
+  <br>
+  <%= link_to 'New project', new_project_path, class: "py-2 px-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
 </div>
